Realign add rule buttons with other clear and intercept buttons, fix specs accordingly

--- a/app/stylesheets/_grid.css
+++ b/app/stylesheets/_grid.css
@@ -34,5 +34,5 @@ header .grid-container {
 }
 
 .response-action {
-  grid-template-columns: 250px auto ;
+  grid-template-columns: 180px auto ;
 }
