--- a/app/stylesheets/styles.css
+++ b/app/stylesheets/styles.css
@@ -156,3 +156,7 @@
   -o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
   transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
 }
+#success-msg{
+  text-align: center;
+  padding: 5px;
+}
